--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -1,40 +1,40 @@
-name: CI/CD
-
-on:
-  workflow_dispatch:
-  push:
-    branches: [ master ]
-
-env:
-  DEPLOY_PATH: /home/a0548906/domains/lyaman-askerova.kz/public_html/
-  BUILD_SCRIPT_OUTPUT: dist/
-
-jobs:
-  build-frontend:
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./client
-
-    steps:
-      - name: Prepare environments
-        uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Generate bundle
-        run: npm run generate
-
-      - name: Deploy to Server
-        uses: easingthemes/ssh-deploy@main
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SOURCE: ${{ env.BUILD_SCRIPT_OUTPUT }}
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          TARGET: ${{ env.DEPLOY_PATH }}
+#name: CI/CD
+#
+#on:
+#  workflow_dispatch:
+#  push:
+#    branches: [ master ]
+#
+#env:
+#  DEPLOY_PATH: /home/a0548906/domains/lyaman-askerova.kz/public_html/
+#  BUILD_SCRIPT_OUTPUT: dist/
+#
+#jobs:
+#  build-frontend:
+#    runs-on: ubuntu-latest
+#
+#    defaults:
+#      run:
+#        working-directory: ./client
+#
+#    steps:
+#      - name: Prepare environments
+#        uses: actions/checkout@v3
+#      - uses: actions/setup-node@v3
+#        with:
+#          node-version: 16
+#
+#      - name: Install dependencies
+#        run: npm ci
+#
+#      - name: Generate bundle
+#        run: npm run generate
+#
+#      - name: Deploy to Server
+#        uses: easingthemes/ssh-deploy@main
+#        env:
+#          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+#          SOURCE: ${{ env.BUILD_SCRIPT_OUTPUT }}
+#          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+#          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+#          TARGET: ${{ env.DEPLOY_PATH }}
