--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -30,6 +30,15 @@ jobs:
       - name: Generate bundle
         run: npm run generate
 
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          known_hosts: unnecessary
+
+      - name: Adding Known Hosts
+        run: ssh-keyscan -p ${{ secrets.SSH_PORT}} -H ${{ secrets.REMOTE_HOST }}  >> ~/.ssh/known_hosts
+
       - name: rsync deployments
         uses: burnett01/rsync-deployments@5.2.1
         with:
