--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -39,21 +39,21 @@ jobs:
       - name: Adding Known Hosts
         run: ssh-keyscan -p ${{ secrets.SSH_PORT}} -H ${{ secrets.REMOTE_HOST }}  >> ~/.ssh/known_hosts
 
-      - name: rsync deployments
-        uses: burnett01/rsync-deployments@5.2.1
-        with:
-          switches: -avzr --delete
-          path: ${{ env.BUILD_SCRIPT_OUTPUT }}
-          remote_path: ${{ env.DEPLOY_PATH }}
-          remote_host: ${{ secrets.REMOTE_HOST }}
-          remote_user: ${{ secrets.REMOTE_USER }}
-          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #      - name: rsync deployments
+      #        uses: burnett01/rsync-deployments@5.2.1
+      #        with:
+      #          switches: -avzr --delete
+      #          path: ${{ env.BUILD_SCRIPT_OUTPUT }}
+      #          remote_path: ${{ env.DEPLOY_PATH }}
+      #          remote_host: ${{ secrets.REMOTE_HOST }}
+      #          remote_user: ${{ secrets.REMOTE_USER }}
+      #          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-#      - name: Deploy to Server
-#        uses: easingthemes/ssh-deploy@main
-#        env:
-#          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-#          SOURCE: ${{ env.BUILD_SCRIPT_OUTPUT }}
-#          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-#          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-#          TARGET: ${{ env.DEPLOY_PATH }}
+      - name: Deploy to Server
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SOURCE: ${{ env.BUILD_SCRIPT_OUTPUT }}
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: ${{ env.DEPLOY_PATH }}
