--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     },
     "dependencies": {
         "@nuxt/components": "^2.2.1",
+        "@nuxt/image": "^0.7.1",
         "@nuxtjs/axios": "^5.13.6",
         "@nuxtjs/dotenv": "^1.4.1",
+        "@nuxtjs/proxy": "^2.1.0",
         "@nuxtjs/style-resources": "^1.2.1",
         "@nuxtjs/svg-sprite": "^0.5.2",
         "core-js": "^3.19.3",
