add review section

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,11 @@
-version: '3.8'
-
-x-app_environment:
-  environment:
-    - DEBUG
-    - TLS_MODE
-    - SECRET_KEY
-    - MYSQL_ROOT_PASSWORD
-    - MYSQL_DATABASE
-    - MYSQL_USER
-    - MYSQL_PASSWORD
-    - MYSQL_PORT
-    - MYSQL_HOST
-    - SITE_HOST
-    - EMAIL_HOST
-    - EMAIL_HOST_USER
-    - EMAIL_HOST_PASSWORD
-    - EMAIL_PORT
+version: '3.9'
 
 services:
   db:
     image: mysql:latest
     restart: always
-    environment:
-      - MYSQL_DATABASE
-      - MYSQL_USER
-      - MYSQL_PASSWORD
-      - MYSQL_ROOT_PASSWORD
-    ports:
-      - 3333:3306
+    env_file:
+      - .env
     volumes:
       - db-data:/var/lib/mysql
 
@@ -35,7 +13,7 @@ services:
   nginx:
     volumes:
       - nginx_cache:/var/lib/nginx/proxy_cache
-      - static:/var/www/static/
+      - static:/app/static/
     build:
       context: ./nginx
     depends_on:
@@ -43,39 +21,26 @@ services:
     ports:
       - 80:80
       - 443:443
-    environment:
-      - HTPASSWD_NODE
-      - HTPASSWD
-      - TLS_MODE
-      - SITE_HOST
-      - ENVIRONMENT
+    env_file:
+      - .env
 
   server:
     restart: always
     build:
       context: ./server
-    environment:
-      - DEBUG=False
-      - MYSQL_DATABASE
-      - MYSQL_USER
-      - MYSQL_PASSWORD
-      - MYSQL_PORT
-      - MYSQL_HOST
-    ports:
-      - 8000:8000
+    env_file:
+      - .env
     depends_on:
       - db
     volumes:
-      - static:/app/static/:delegated
+      - static:/app/static/
 
   frontend:
     restart: always
     build:
       context: ./client
-    environment:
-      - SERVER_API_URL
-    ports:
-      - 3000:3000
+    env_file:
+      - .env
     volumes:
       - nuxt:/app/nuxt_volume:delegated
 
