--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,8 +12,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-#RUN python manage.py makemigrations
-#RUN python manage.py migrate
-RUN python manage.py collectstatic --no-input
+COPY wait-for /usr/bin/
+RUN chmod +x /usr/bin/wait-for
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+RUN chmod +x entrypoint.sh
