--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,10 +34,12 @@ services:
       - .env
     depends_on:
       - db
-    ports:
-      - 8000:8000
     volumes:
       - static:/app/static/
+    entrypoint: ./entrypoint.sh
+    command: python manage.py runserver 0.0.0.0:8000
+    ports:
+      - 8000:8000
 
   frontend:
     restart: always
