add backend on django,complete setting nginx and mysql

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,6 +2,8 @@ FROM node:16.16-alpine
 
 WORKDIR /app
 
+EXPOSE 3000
+
 RUN apk update && apk upgrade
 
 COPY ./package*.json /app/
@@ -10,8 +12,7 @@ RUN npm install && npm cache clean --force
 
 COPY . .
 
-EXPOSE 3000
+RUN chmod +x entrypoint.production.sh
 
 RUN npm run build
 
-ENTRYPOINT ["npm", "run", "start"]
