--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
         "@nuxtjs/svg-sprite": "^0.5.2",
         "core-js": "^3.19.3",
         "gsap": "^3.12.1",
-        "nuxt": "2.15.8",
+        "nuxt": "^2.15.8",
+        "swiper": "^8.4.7",
         "vue": "^2.6.14",
         "vue-lazyload": "^1.3.3",
         "vue-server-renderer": "^2.6.14",
