feat(redesign): update backend and frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,7 @@ services:
     restart: always
     build:
       context: ./client
+    command: npm run start
     environment:
       SERVER_API_URL: ${SERVER_API_URL}
     volumes:
