feat(redesign): update backend and frontend

--- a/frontend/.stylelintrc
+++ b/frontend/.stylelintrc
@@ -1,6 +1,16 @@
 {
+    "customSyntax": "postcss-scss",
+    "overrides": [
+        {
+            "files": [
+                "**/*.vue"
+            ],
+            "customSyntax": "postcss-html"
+        }
+    ],
     "extends": [
         "stylelint-config-standard",
+        "stylelint-config-standard-scss",
         "stylelint-config-css-modules"
     ],
     "plugins": [
@@ -8,6 +18,11 @@
         "stylelint-order"
     ],
     "rules": {
+        "selector-class-pattern": null,
+        "scss/comment-no-empty": null,
+        "shorthand-property-no-redundant-values": null,
+        "property-no-vendor-prefix": null,
+        "max-line-length": null,
         "at-rule-no-unknown": null,
         "scss/at-rule-no-unknown": true,
         "declaration-colon-newline-after": "always-multi-line",
