--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,33 +23,32 @@
         "@nuxtjs/proxy": "^2.1.0",
         "@nuxtjs/style-resources": "^1.2.1",
         "@nuxtjs/svg-sprite": "^0.5.2",
-        "core-js": "^3.19.3",
         "gsap": "^3.12.1",
-        "nuxt": "^2.15.8",
+        "nuxt": "2.15.8",
         "swiper": "^8.4.7",
-        "vue": "^2.6.14",
-        "vue-lazyload": "^1.3.3",
-        "vue-server-renderer": "^2.6.14",
-        "vue-template-compiler": "^2.6.14",
-        "webpack": "^4.46.0"
+        "vue-lazyload": "^1.3.3"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.5.4",
-        "@babel/preset-env": "^7.17.10",
+        "@babel/eslint-parser": "^7.22.4",
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@babel/preset-env": "^7.21.11",
         "@nuxtjs/eslint-module": "^3.0.1",
-        "@nuxtjs/stylelint-module": "^4.0.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "8.22.0",
+        "@nuxtjs/stylelint-module": "^4.2.1",
+        "eslint": "^8.14.0",
         "eslint-plugin-vue": "^8.7.1",
         "nano-staged": "^0.5.0",
+        "postcss-html": "^1.5.0",
+        "postcss-values-parser": "^5.0.0",
         "sass": "^1.51.0",
         "sass-loader": "^10.2.0",
         "simple-git-hooks": "^2.7.0",
-        "stylelint": "^13.12.0",
-        "stylelint-config-css-modules": "^2.2.0",
-        "stylelint-config-standard": "^21.0.0",
-        "stylelint-order": "^4.1.0",
-        "stylelint-scss": "^3.19.0",
-        "stylelint-webpack-plugin": "^2.3.2"
+        "stylelint": "^14.16.1",
+        "stylelint-config-css-modules": "^4.1.0",
+        "stylelint-config-standard": "^29.0.0",
+        "stylelint-config-standard-scss": "^6.1.0",
+        "stylelint-order": "^5.0.0",
+        "stylelint-scss": "^4.3.0",
+        "stylelint-webpack-plugin": "^2.4.0",
+        "webpack": "^4.46.0"
     }
 }
