--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,8 @@ services:
       SERVER_API_URL: ${SERVER_API_URL}
     volumes:
       - nuxt:/app/nuxt_volume:delegated
+    ports:
+      - "3000:3000"
     networks:
       - strapi
 
