feat(redesign): update backend and frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,7 @@ services:
       - nuxt:/app/nuxt_volume:delegated
     depends_on:
       - strapi
+      - nginx
     networks:
       - strapi
 
